--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-number-format": "^5.2.2",
+    "react-input-mask": "^2.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-input-mask": "^3.0.2"
   }
 }
